--- a/SuperEconomicoApp/Views/PaymentMethodView.xaml
+++ b/SuperEconomicoApp/Views/PaymentMethodView.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SuperEconomicoApp.Views.PaymentMethodView"
-             Visual="Material">
+             Visual="Material"
+             BackgroundColor="#F2F3F6">
 
     <ContentPage.Resources>
         <Style TargetType="BoxView"
@@ -70,7 +71,7 @@
                 </CollectionView.ItemsLayout>
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Frame BackgroundColor="#DEDEDE"
+                        <Frame BackgroundColor="White"
                            CornerRadius="15">
                             <StackLayout Orientation="Horizontal">
                                 <Image Source="{Binding Image}" 
